; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/qmgr/extr_file.c_addFileHelper.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/qmgr/extr_file.c_addFileHelper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@test_localFile = common dso_local global i32 0, align 4
@test_remoteUrl = common dso_local global i32 0, align 4
@URL_UNESCAPE_INPLACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @addFileHelper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addFileHelper(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* @MAX_PATH, align 4
  %9 = load i32, i32* @test_localFile, align 4
  %10 = call i32 @GetCurrentDirectoryW(i32 %8, i32 %9)
  %11 = load i32, i32* @test_localFile, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @PathAppendW(i32 %11, i32* %12)
  %14 = load i32, i32* @MAX_PATH, align 4
  %15 = load i32, i32* @test_remoteUrl, align 4
  %16 = call i32 @GetCurrentDirectoryW(i32 %14, i32 %15)
  %17 = load i32, i32* @test_remoteUrl, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @PathAppendW(i32 %17, i32* %18)
  %20 = load i32, i32* @MAX_PATH, align 4
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* @test_remoteUrl, align 4
  %22 = load i32, i32* @test_remoteUrl, align 4
  %23 = call i32 @UrlCreateFromPathW(i32 %21, i32 %22, i32* %7, i32 0)
  %24 = load i32, i32* @test_remoteUrl, align 4
  %25 = load i32, i32* @URL_UNESCAPE_INPLACE, align 4
  %26 = call i32 @UrlUnescapeW(i32 %24, i32* null, i32* %7, i32 %25)
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* @test_remoteUrl, align 4
  %29 = load i32, i32* @test_localFile, align 4
  %30 = call i32 @IBackgroundCopyJob_AddFile(i32* %27, i32 %28, i32 %29)
  ret i32 %30
}

declare dso_local i32 @GetCurrentDirectoryW(i32, i32) #1

declare dso_local i32 @PathAppendW(i32, i32*) #1

declare dso_local i32 @UrlCreateFromPathW(i32, i32, i32*, i32) #1

declare dso_local i32 @UrlUnescapeW(i32, i32*, i32*, i32) #1

declare dso_local i32 @IBackgroundCopyJob_AddFile(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
